Archive2/0b/755a5414c9cc37/output
main.cpp:22:18: error: missing 'typename' prior to dependent type name 'CurryType<double, int>::type'
    /*typename*/ CurryType<double, int>::type AnOverriddenDefault;
                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                 typename 
1 error generated.
